   date and language
 * add options to the Advanced Open File dialog for start and stop time
 * add an option to play videos as a desktop background
 * add support for playing video and showing audio visualizations side by side
 * improve fullscreen controller time slider with larger click target
 * rewrite of minimal macosx module for use within VLCKit
 * The Streaming/Transcoding wizard and the open dialog's output panel are
   deprecated now

Qt:
 * Partial support for Qt5.0
 * Menus modifications and improvements
 * Playlist improvements and fixes, including PictureFlow view
 * Streaming output wizard rewrite
 * Numerous fixes

libVLC:
 * new libvlc_audio_output_device_list_get and libvlc_audio_output_device_list_release functions
   to replace the deprecated libvlc_audio_output_device_count, libvlc_audio_output_device_longname
   and libvlc_audio_output_device_id
 * libvlc_audio_output_get_device_type and libvlc_audio_output_set_device_type are now deprecated
 * new libvlc_log_subscribe and libvlc_log_unsubscribe function to register logging callbacks
 * new libvlc_media_tracks_get and libvlc_media_tracks_release methods to get more info about the
   media tracks. libvlc_media_get_tracks_info is now deprecated.

Removed modules:
 * portaudio audio output: use the native audio output instead
 * X11 On Screen Display notifications (xosd)
 * Linux Framebuffer On Screen Display interface (fbosd)
 * PVR: IVTV analog TV encoder - use V4L instead
 * RTMP access: use libavformat avio instead
 * RTMP access_output: use libavformat avio instead
 * Hildon GUI
 * MSN messenger "now playing" (broken and unmaintained since VLC 1.0.0)
 * Telepathy framework "now playing" (broken and unmaintained since VLC 1.0.0)
 * Nokia/Maemo MCE screen unblanking plugin


Changes between 2.0.4 and 2.0.5:
--------------------------------

Access:
 * Fix DVB-S delivery system detection

Audio Output:
 * Fix playback initial synchronization with PulseAudio